--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,13 @@
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
         "tcg/voyager": "^1.4",
-        "torrix/laravel-ui-uikit": "^3.3",
-      "ext-mongodb": "*"
+        "torrix/laravel-ui-uikit": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^4.1"
     },
     "config": {
         "optimize-autoloader": true,
